disappearing lines on mobile fixed in login page, small adjustments made to input field

--- a/resources/sass/components/create-post.scss
+++ b/resources/sass/components/create-post.scss
@@ -23,6 +23,7 @@
 
         input[type=file] {
             border: none;
+            padding: 0px;
         }
 
         input[type=file]::file-selector-button { //input button "Choose File" styling
@@ -49,6 +50,7 @@
             padding-right: 1.5%;
             border: 1px solid #949494;
             outline: none;
+            padding: 5px;
         }
 
         textarea {
@@ -64,7 +66,7 @@
             text-transform: capitalize;
             background-color: black;
             color: white;
-            height: 30px;
+            height: 35px;
             border: none;
             margin-top: 10px;
             margin-bottom: 10px;
