--- a/resources/sass/components/login.scss
+++ b/resources/sass/components/login.scss
@@ -25,6 +25,9 @@
 
         input {
             outline: none;
+            border: 1px solid #949494;
+            padding: 5px;
+            outline: none;
         }
 
         button {
@@ -33,7 +36,7 @@
             background-color: black;
             color: white;
             border: none;
-            height: 30px;
+            height: 35px;
             margin-top: 10px;
             &:hover {
                 background-color: rgb(56, 56, 56);
